--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head> 
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Tabelas em html</title>
-  <link rel="stylesheet" href="./css/design.css" />
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Tabelas em html</title>
+    <link rel="stylesheet" href="./css/design.css" />
   </head>
   <body>
     <!-- Primeira Tabela-->
@@ -90,32 +90,37 @@
           </div>
           <div>
             <label for="nome">E-mail: </label>
-            <input type="text" name="nome" id="nome" placeholder="jose123@gmail.com" />
+            <input
+              type="text"
+              name="nome"
+              id="nome"
+              placeholder="jose123@gmail.com"
+            />
           </div>
           <div>
-              <input type="radio" name="masculino" id="masculino">
-              <label for="masculino">Masculino</label>
-              <input type="radio" name="feminino" id="feminino">
-              <label for="feminino">Feminino</label>
+            <input type="radio" name="masculino" id="masculino" />
+            <label for="masculino">Masculino</label>
+            <input type="radio" name="feminino" id="feminino" />
+            <label for="feminino">Feminino</label>
           </div>
           <div>
             <label for="">Estado/Cidade</label>
             <select name="estado" id="estado" required>
-            <option></option>
-            <option value="1">Acre</option>
-            <option value="2">Rio Grande do Sul</option>
-            <option value="3">Minas Gerais</option>
-            <input type="text">
-          </select>
+              <option></option>
+              <option value="1">Acre</option>
+              <option value="2">Rio Grande do Sul</option>
+              <option value="3">Minas Gerais</option>
+              <input type="text" />
+            </select>
           </div>
           <label for="file">Selecione um arquivo</label>
           <input type="file" name="arquivo[]" multiple /><br />
           <input type="hidden" name="id" value="1" /><br />
-          
-          <label for="mensagem">Sugestão:</label><br>
+
+          <label for="mensagem">Sugestão:</label><br />
           <textarea name="mensagem"></textarea>
           <br />
-          <input type="image" src="/img/download.png">
+          <input type="image" src="/img/download.png" />
         </fieldset>
       </form>
     </main>
